[package]
name = "liquidation-bot-v3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gql_client = "1.1.0"
alloy = { version = "1.8.2", features = ["full", "getrandom", "node-bindings"] }
figment = { version = "0.10", features = ["toml", "env"] }
itertools = "0.14.0"
backon = { version = "1.6.0", features = ["tokio"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1.0"
axum = "0.8.9"
tower-http = { version = "0.6.8", features = ["cors"] }
tower = { version = "0.5.3", features = ["tokio"] }
http = "1.4.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde_with = { version = "3.19.0", features = ["chrono", "json"] }
http-cache-reqwest = "0.16.0"
reqwest-middleware = "0.4"
tempfile = "3.27.0"
futures = "0.3.32"
